apps/landisk-search-system/nginx/endpoints.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: landisk-nginx
subsets:
  - addresses:
      - ip: 192.168.0.50
      - ip: 192.168.0.51
      - ip: 192.168.0.52
    ports:
      - port: 8080
        name: http
