apps/landisk-search-system/nginx/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: landisk-nginx
  annotations:
    kube-score/ignore: |
      service-targets-pod
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
