apps/landisk-search-system/nginx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  rules:
    - host: www.landisk.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: landisk-nginx
                port:
                  number: 8080
